# Web_app-example

./: .env  Cargo.toml  config.yml  diesel.toml  docker-compose.yml  state.json
css/: main.css
javascript/: main.js
migrations/2024-10-13-152734_create_to_do_items/: up.sql
migrations/2024-10-16-170705_create_users/: up.sql
scripts/: wait_for_database.sh
src/: config.rs  database.rs  jwt.rs  main.rs  schema.rs
src/json_serialization/: to_do_item.rs  to_do_items.rs
src/models/item/: item.rs  new_item.rs
src/models/user/: new_user.rs  user.rs
src/to_do/: enums.rs  mod.rs
src/to_do/structs/: done.rs  pending.rs
src/views/: mod.rs
src/views/app/: content_loader.rs  items.rs
src/views/auth/: login.rs  logout.rs  mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  mod.rs
src/views/users/: create.rs  mod.rs
templates/: main.html
