[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.128"
actix-web = "4.9.0"
serde = {version = "1.0.210", features = ["derive"]}
actix-service = "2.0.2"
futures = "0.3.30"
diesel ={version = "2.2.4", features = ["postgres", "chrono", "r2d2"]}
dotenv = "0.15.0"
chrono = {version = "0.4.38", features = ["serde"]}
actix-cors = "0.7.0"
serde_yaml = "0.9.34"
bcrypt = "0.15.1"
uuid = {version = "1.11.0", features = ["serde", "v4"]}
jsonwebtoken = "9.3.0"